<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/ll_about_container"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
    >

    <TextView
        style="@style/AppTextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/text_padding_large"
        android:text="@string/text_about_data_from"
        android:id="@+id/tv_gank_io"
        />

    <TextView
        style="@style/AppTextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/text_padding_large"
        android:text="@string/text_about_data_from_github"
        android:id="@+id/tv_gank_address"
        />

    <TextView
        style="@style/AppTextCommon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/text_padding_large"
        android:text="@string/text_about_data_framework"
        />
</LinearLayout>